--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-debug-toolbar = "*"
 mysqlclient = "*"
 pillow = "*"
+djangorestframework = "*"
 
 [dev-packages]
 autopep8 = "*"
